2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.test: More boilerplate simplified via use of test support.
	* tie_array.test:
	* tie_file.test:
	* tie_log.test:
	* tie_rarray.test:
	* tie_rarray_comm.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.test: Hooked into the new common test support code.
	* tie_array.test:
	* tie_file.test:
	* tie_log.test:
	* tie_rarray.test:
	* tie_rarray_comm.test:

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* tie_rarray_comm.test: Disabled the gratuitous puts commands
	  found in the tests. This unclutteres the output. This fixes the
	  [SF Tcllib Bug 1316063].

	* tie_file.tcl (Compact): Accepted patch by Anton Osennikov
	  <wish2@users.sourceforge.net> for [SF Tcllib Patch
	  1378556]. This fixes a bug in the configuration of the log file
	  after compaction, on Windows.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-26  Andreas Kupries <andreask@activestate.com>

	* tie_file.tcl: Fixed bug in cache invalidation. nothing to do
	  if the cache is already invalidated.

2005-09-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.test: Made results of tie-7.1 and -7.2 version-dependent,
	  using the proper tcltest commands from all.tcl.

2005-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ../examples/tie/metakit.tcl: Added an example backend for tieing
	  arrays to a metakit database.

2005-03-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.man (unsetv): Fixed a small documentation error. The
	  argument to unsetv is not optional. Thanks to Colin McCormack
	  <coldstore@users.sourceforge.net> for finding this.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 
