@@ -6,7 +6,7 @@
 # This is a tie for remote array ties, actually using separate
 # processes. This is based on the package "comm", also in Tcllib.
 #
-# RCS: @(#) $Id: tie_rarray_comm.test,v 1.8 2006/01/27 03:39:57 andreas_kupries Exp $
+# RCS: @(#) $Id: tie_rarray_comm.test,v 1.9 2006/01/29 00:48:50 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -220,5 +220,7 @@ csenda {{exit}}
 ::comm::comm abort
 
 interp alias {} csend
+removeFile spawn
+
 ::tcltest::cleanupTests
 return
