@@ -1,3 +1,8 @@
+2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* tie_file.test: ...... Fixed creation and cleanup of temp. files
+	* tie_rarray_comm.test: by the testsuite.
+
 2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* tie.test: More boilerplate simplified via use of test support.
